# smg

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  REVIEW.md  clippy.toml  mkdocs.yml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  mergify.yml
.github/workflows/: _build-engine-image.yml  benchmark-mesh-serialization.yml  claude-code-review.yml  docs.yml  e2e-gpu-job.yml  nightly-benchmark.yml  nightly-docker.yml  pr-naming-check.yml  pr-test-rust.yml  release-docker.yml  release-go.yml  release-grpc.yml  release-helm.yml  release-sglang-docker.yml  release-trtllm-docker.yml  release-vllm-docker.yml  stale.yml
bindings/golang/: Cargo.toml  go.mod
bindings/golang/src/: client.rs  grpc_converter.rs  policy.rs  preprocessor.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_arg_parser.py  test_serve.py
clients/java/: .openapi-generator-ignore  pom.xml
clients/openapi-gen/: Cargo.toml
crates/blob_storage/: Cargo.toml
crates/blob_storage/src/: cache.rs  config.rs  factory.rs  filesystem.rs  lib.rs  store.rs  types.rs
crates/blob_storage/tests/: filesystem_blob_store.rs
crates/data_connector/: Cargo.toml  README.md
crates/data_connector/src/: background.rs  core.rs  factory.rs  lib.rs  memory.rs  memory_background.rs  oracle.rs  oracle_migrations.rs  postgres.rs  postgres_migrations.rs  schema.rs  versioning.rs
crates/grpc_client/: Cargo.toml  build.rs
crates/grpc_client/proto/: mlx_engine.proto  sglang_scheduler.proto  trtllm_service.proto
crates/grpc_client/python/: pyproject.toml  setup.py
crates/grpc_client/src/: lib.rs  mlx_engine.rs  sglang_scheduler.rs  trtllm_service.rs  vllm_engine.rs
crates/kv_index/: Cargo.toml
crates/kv_index/src/: event_tree.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: lib.rs  responses_bridge.rs
crates/mesh/: Cargo.toml  build.rs
crates/mesh/benches/: mesh_serialization.rs
crates/mesh/src/: README.md  chunk_assembler.rs  chunking.rs  collector.rs  controller.rs  flow_control.rs  incremental.rs  kv.rs  lib.rs  ping_server.rs  service.rs  stores.rs  sync.rs  tree_ops.rs
crates/protocols/: Cargo.toml
crates/protocols/src/: chat.rs  common.rs  event_types.rs  generate.rs  interactions.rs  lib.rs  messages.rs  rerank.rs  responses.rs  skills.rs  tokenize.rs  transcription.rs  worker.rs
crates/protocols/tests/: background_mode_protocol.rs  responses.rs  skills_protocol.rs
crates/reasoning_parser/: Cargo.toml
crates/skills/: Cargo.toml
crates/skills/src/: api.rs  config.rs  lib.rs  memory.rs  storage.rs  types.rs  validation.rs
crates/skills/tests/: in_memory_runtime.rs  skill_bundle_normalization.rs  skill_bundle_parsing.rs
crates/tokenizer/: Cargo.toml
crates/tokenizer/benches/: stop_decoder.rs
crates/tokenizer/src/: chat_template.rs  eos.rs  hub.rs  huggingface.rs  lib.rs  sequence.rs  stop.rs  tiktoken.rs  traits.rs
crates/tokenizer/tests/: chat_template_format_detection.rs  tokenizer_integration.rs
crates/tool_parser/: Cargo.toml  README.md
crates/wasm/: Cargo.toml
crates/workflow/: Cargo.toml
docker/: Dockerfile  engine.Dockerfile
docs/getting-started/: control-plane-operations.md  external-providers.md  grpc-workers.md  index.md  load-balancing.md  monitoring.md  multiple-workers.md  service-discovery.md
docs/reference/: configuration.md  mcp-internal-servers.md  metrics.md
e2e_test/: conftest.py  pyproject.toml
e2e_test/benchmarks/: test_kv_event_perf.py  test_nightly_perf.py
e2e_test/bindings_go/: conftest.py
e2e_test/chat_completions/: test_enable_thinking.py  test_function_calling.py  test_openai_server.py  test_structured_output.py  test_validation.py
e2e_test/completions/: __init__.py  test_basic.py
e2e_test/fixtures/: __init__.py  pool.py  setup_backend.py
e2e_test/infra/: __init__.py  constants.py  gpu_allocator.py  mock_mcp.py  mock_mcp_server.py  model_specs.py  process_utils.py  worker.py
e2e_test/responses/: conftest.py  test_annotations.py  test_builtin_tools.py  test_image_generation.py  test_sampling_params.py  test_state_management.py  test_streaming_events.py  test_structured_output.py  test_tools_call.py  test_validation.py
e2e_test/router/: test_mmmu.py  test_worker_api.py
grpc_client/proto/: vllm_engine.proto
grpc_servicer/: DEVELOPMENT.md  README.md  pyproject.toml
grpc_servicer/docker/: vllm-smoke.Dockerfile  vllm-smoke.sh
grpc_servicer/smg_grpc_servicer/: tokenizer_bundle.py
grpc_servicer/smg_grpc_servicer/mlx/: __init__.py  health_servicer.py  server.py  servicer.py
grpc_servicer/smg_grpc_servicer/sglang/: __init__.py  health_servicer.py  request_manager.py  scheduler_launcher.py  server.py  servicer.py
grpc_servicer/smg_grpc_servicer/vllm/: __init__.py  health_servicer.py  kv_events.py  servicer.py
grpc_servicer/tests/: conftest.py  test_kv_events.py  test_proto_symbols.py
mcp/src/: lib.rs
model_gateway/: Cargo.toml
model_gateway/benches/: manual_policy_benchmark.rs  request_processing.rs  routing_allocation_bench.rs  sync_alloc_bench.rs  wasm_middleware_latency.rs
model_gateway/src/: app_context.rs  lib.rs  main.rs  middleware.rs  server.rs  service_discovery.rs  tenant.rs
model_gateway/tests/: load_guard_raii_test.rs  mcp_test.rs  messages_streaming_test.rs  metrics_aggregator_test.rs  otel_tracing_test.rs  wasm_test.rs
protocols/src/: event_types.rs  lib.rs  realtime_events.rs
reasoning_parser/src/: factory.rs  lib.rs  traits.rs
scripts/: bench_image_preprocess.py  check_release_versions.sh  ci_download_model.sh  ci_install_sglang.sh  ci_install_trtllm.sh  ci_install_vllm.sh  dco-check.sh  fix_java_codegen.sh  mesh_load_gen.py  release_docker_notes.sh  run_vllm_grpc_servicer_smoke.sh
scripts/installation/: install-sglang.sh  install-smg.sh
scripts/k8s-runner-resources/: README.md  arc-runner-autoscaler.yaml  arc-runner-cpu.yaml  arc-runner-gpu.yaml  arc-runner-rbac.yaml
scripts/oracle_flyway/: schema-config.yaml
test_support/: blob_test_utils.rs
tui/: Cargo.toml
(+297 files in other folders)
