[package]
name = "openapi-gen"
version = "0.1.1"
edition = "2021"
description = "Generate OpenAPI 3.1 spec from openai-protocol types"
publish = false

[dependencies]
anyhow = { workspace = true }
openai-protocol = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml_ng = "0.10"

[lints]
workspace = true
