[package]
name = "smg-skills"
version = "0.1.0"
edition = "2021"
description = "Skills domain types and service scaffolding for SMG"
license = "Apache-2.0"
repository = "https://github.com/lightseekorg/smg"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Chang Su <mckvtl@gmail.com>",
    "Keyang Ru <rukeyang@gmail.com>",
]
keywords = ["skills", "agents", "gateway"]
categories = ["web-programming", "network-programming"]

[lib]
name = "smg_skills"

[dependencies]
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
parking_lot.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yml = "0.0.12"
smg-blob-storage.workspace = true
thiserror.workspace = true
ulid = "1.2.1"
zip = "8.1"

[dev-dependencies]
anyhow.workspace = true
serde_json.workspace = true
tempfile = "3.15"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
