[package]
name = "smg-wasm"
version = "1.1.0"
edition = "2021"
description = "WebAssembly runtime and module management for Shepherd Model Gateway"
license = "Apache-2.0"
repository = "https://github.com/lightseekorg/smg"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Tony Lu <tonyluj@gmail.com>",
]
keywords = ["wasm", "wasmtime", "middleware", "component-model"]
categories = ["wasm", "web-programming"]

[lib]
name = "smg_wasm"

[features]
default = []
storage-hooks = ["dep:smg-data-connector", "dep:async-trait", "dep:serde_json"]

[dependencies]
async-channel = "2.5"
async-trait = { workspace = true, optional = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
lru = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
sha2 = "0.10"
smg-data-connector = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "time"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
